<?xml version="1.0" encoding="utf-8"?>
  <menu xmlns:android="http://schemas.android.com/apk/res/android">
      <item android:id="@+id/action_play" android:title="@string/play" android:icon="@drawable/ic_play" />
      <item android:id="@+id/action_details" android:title="@string/details" android:icon="@drawable/ic_info" />
      <item android:id="@+id/action_share" android:title="@string/share" android:icon="@drawable/ic_share" />
      <item android:id="@+id/action_favorite" android:title="@string/add_to_favorites" android:icon="@drawable/ic_favorite" />
      <item android:id="@+id/action_rename" android:title="@string/rename" android:icon="@drawable/ic_edit" />
      <item android:id="@+id/action_vault" android:title="@string/move_to_vault" android:icon="@drawable/ic_lock_closed" />
      <item android:id="@+id/action_delete" android:title="@string/delete" android:icon="@drawable/ic_delete" />
  </menu>