<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_videos"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/nav_videos" />

    <item
        android:id="@+id/nav_folders"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:title="@string/nav_folders" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/nav_favorites" />

    <item
        android:id="@+id/nav_recent"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_recent" />

    <item
        android:id="@+id/nav_more"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/nav_more" />

</menu>
